--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh; /* Ensure the background covers the viewport height */
+    height: 100vh; 
     margin: 0;
     padding: 0;
 }
